k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        # Replace <YOUR_DOCKERHUB_USERNAME> with your actual Docker Hub username
        image: <YOUR_DOCKERHUB_USERNAME>/wisecow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
